instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:2: error: type blue is not a member of object java.awt.Color
setCouleurBrosse(c:Color.blue)
                         ^InstructionsDrawG:2: error: not found: value c
setCouleurBrosse(c:Color.blue)
                 ^