instructions.InstructionsDrawG.scala.code

setCouleurBrosse(c:Color.blue)
baisseBrosse();
gauche();
avance(4:Int);
gauche();
avance(4:Int);
gauche();
avance(4:Int);
gauche();
avance(2:Int);
gauche();
avance();
leveBrosse();
droite();
avance(2:Int);
droite();
avance();
gauche();